nginx/2.service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 80
      name: http
