nginx/4.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
spec:
  rules:
  - host: traefik.rocks
    http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx
          servicePort: http
